--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="top-image.jpg" class="top-banner" alt="夜の大人のIQテスト">
         
         <h1>夜の大人のIQテスト</h1>
-        <p style="font-size: 14px; color: #ccc;">オルガグローバルPresents<br>10問で分かる！あなたの夜のIQてすと</p>
+        <p style="font-size: 14px; color: #ccc;">★オルガグローバル★Presents<br>10問で分かる！あなたの夜のオトナの知識度は？</p>
         
         <input type="text" id="userName" placeholder="名前を入力">
         <br>
@@ -176,3 +176,4 @@
 </script>
 </body>
 </html>
+
