--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 
                 const shareUrl = "https://zeroplus1234.github.io/night-iq/";
                 const tweetText = encodeURIComponent(
-                    `${userName}さんの夜のIQは【${score}/10点】ランク：${rank}でした！\n\n` +
+                    `${userName}さんのオトナ♡の夜のIQは【${score}/10点】ランク：${rank}でした！\n\n` +
                     `※下の画像を保存して、このポストに添付してね！📸\n\n` +
                     `▼今すぐ測定！\n${shareUrl}\n` +
                     `#オトナの夜のIQ診断 #オルガグローバル`
@@ -169,3 +169,4 @@
 </script>
 </body>
 </html>
+
