--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>オトナの夜のIQテスト | ★オルガグローバル★Presents</title>
 
-    <meta property="og:title" content="オトナの夜のIQテスト | ★オルガグローバル★Presents">
-    <meta property="og:description" content="10問で分かる！あなたのオトナの夜の知識度は？">
-    <meta property="og:image" content="https://zeroplus1234.github.io/night-iq/top-image.jpg">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image"> <meta property="og:title" content="オトナの夜のIQテスト | オルガグローバルPresents">
+<meta property="og:description" content="10問で分かる！あなたのオトナの夜の知識度は？">
+<meta property="og:image" content="https://zeroplus1234.github.io/night-iq/top-image.jpg">"summary_large_image">
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
@@ -169,4 +169,5 @@
 </script>
 </body>
 </html>
+
 
